# iot-sim

./: .gitignore  README.md  client.py  coap-client.py  config_models.py  dev11.json  dev12.json  dev21.json  dev22.json  disaster1.json  icmp-dev1.json  iot-sim-simple.py  iot-sim.py  log-config.json  model.py  orchestrator.py  ping-dev.py  pyproject.toml  run-iot-range.sh  run-iot.sh  sim.py
scenarios/: device-model.json  devices-01-50.json  devices-02-50.json  devices-2x2.json  devices02.json  devices50.json  disaster-model.json  disaster-plan1.json  event-moving.json  event-permanent.json  event-transient.json  schedule-rendezvous-2x2.json
scenarios/2x2/: dev11.json  dev12.json  dev21.json  dev22.json
scenarios/2x50/: device-01-0001.json  device-01-0002.json  device-01-0003.json  device-01-0004.json  device-01-0005.json  device-01-0006.json  device-01-0007.json  device-01-0008.json  device-01-0009.json  device-01-001.json  device-01-0010.json  device-01-0011.json  device-01-0012.json  device-01-0013.json  device-01-0014.json  device-01-0015.json  device-01-0016.json  device-01-0017.json  device-01-0018.json  device-01-0019.json  device-01-002.json  device-01-0020.json  device-01-0021.json  device-01-0022.json  device-01-0023.json  device-01-0024.json  device-01-0025.json  device-01-0026.json  device-01-0027.json  device-01-0028.json  device-01-0029.json  device-01-003.json  device-01-0030.json  device-01-0031.json  device-01-0032.json  device-01-0033.json  device-01-0034.json  device-01-0035.json  device-01-0036.json  device-01-0037.json  (+160 more)
scripts/: generate-config-range.sh  generate-config.sh  run-iot-range.sh  run-iot.sh
src/iot_sim/: __init__.py  battery.py  client.py  evman.py  gw.py  model.py  mqtt.py  network.py  sensor.py  sim.py
web/: app.js  index.html  style.css
