[project]
name = "iot-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocoap>=0.4.17",
    "pydantic>=2.12.5",
    "scapy>=2.6.1",
]

[tool.pyright]
reportUnannotatedClassAttribute = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAny = false
reportExplicitAny = false
