[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-sim"
version = "0.1.0"
description = "IoT simulation framework for CoAP devices"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiocoap>=0.4.17",
    "aiomqtt>=1.0.0",
    "pydantic>=2.12.5",
    "scapy>=2.6.1",
]

[project.scripts]
iot-sim = "iot_sim:run"
iot-client = "iot_sim.client:run"
iot-gw = "iot_sim.gw:run"
ev-man = "iot_sim.evman:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pyright]
reportUnannotatedClassAttribute = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAny = false
reportExplicitAny = false
